--- a/Hooker/Hooker.csproj
+++ b/Hooker/Hooker.csproj
@@ -38,6 +38,10 @@
     <Reference Include="Mono.Cecil.Rocks">
       <HintPath>..\lib\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="UnityEngine">
