added a console thing to the game

--- a/HookRegistry/HookRegistry.csproj
+++ b/HookRegistry/HookRegistry.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Console.cs" />
     <Compile Include="HookRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
